Add Authentication Microservice with JWT & Local Strategies
- Implemented common AuthGuard for route protection.
- Fixed bugs in authentication flow.
- Added email validation for user registration.
- Integrated JWT and local authentication strategies.
- Dockerized authentication service for deployment consistency.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
       - '3001:3001'
     volumes:
       - .:/usr/src/app
-      - /usr/src/app/node_modules # This is to avoid the node_modules folder being overwritten by the volume
+      - /usr/src/app/node_modules 
     environment:
       NODE_ENV: development
     env_file:
