feat: Add Notification module, establish connection with Notification and Payments microservices, and implement success email notifications

--- a/apps/notifications/Dockerfile.dev
+++ b/apps/notifications/Dockerfile.dev
@@ -15,4 +15,4 @@ COPY . .
 
 
 # Default command for development
-CMD ["pnpm", "run", "start:dev", "payments"]
+CMD ["pnpm", "run", "start:dev", "notifications"]
